Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
gst-plugins-bad
gst-plugins-bad
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 1,001
    • Issues 1,001
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 198
    • Merge Requests 198
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Snippets
    • Snippets
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • GStreamer
  • gst-plugins-badgst-plugins-bad
  • Issues
  • #665

Closed
Open
Opened Feb 28, 2018 by Bugzilla Migration User@bugzilla-migration

[gstreamer-msdk-master][SKL] some cases lose frame during vc1 decoding

Submitted by zj,wang

Link to original bug (#793906)

Description

Test Env:

Platform: SKL
Arch: x86_64
CentOS Linux release 7.3.1611 (Core)
Kernel: 4.4.0
libva MediaServerStudioEssentials2017R3.tar.gz (libva
1.67.0.pre1)
media_driver MediaServerStudioEssentials2017R3.tar.gz 16.5.2.64009-
ubit
gstreamer master branch 91798e16cc09420163684d13779f13f374164ea2
gst-bad master branch 1c81bf4b

Reproduce Steps:

take one case for example

  1. build enc as above lists
  2. gst-launch-1.0 -q filesrc location=/media/yami_vc1/SA00073.vc1 '!' 'video/x-wmv,profile=(string)advanced,' width=176, height=144, framerate=14/1 '!' msdkvc1dec '!' videoconvert '!' video/x-raw,format=I420 '!' filesink location=./SA00073.vc1.yuv
  3. dump_file_size=912384
  4. the yuv file size should be 950400.

Failed cases
decode_vc1/SA00072.vc1 FAIL
decode_vc1/SA00073.vc1 FAIL

Blocking

  • Bug 789886
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: gstreamer/gst-plugins-bad#665